k8s/music-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: music-ingress
  namespace: music-app
spec:
  ingressClassName: nginx
  rules:
    - host: music.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
